<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".RegistrationActivity_Age">

    <CalendarView
        android:id="@+id/calendarView1"
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/calendar"

        />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/calendarView1"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/registration_5_heading"
        android:textAlignment="center"
        android:textColor="@color/teal_800"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="31dp"
        android:hint="@string/text_registration_5" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32sp"
        android:layout_marginTop="32sp"
        android:layout_marginEnd="32sp"
        android:layout_marginBottom="32sp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/btn_next"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="301dp"
        tools:layout_editor_absoluteY="595dp" />

</RelativeLayout>
