<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".RegistrationActivity_Name">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="79dp"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="83dp"
        app:srcCompat="@drawable/ic_baseline_drive_file_rename_outline_250"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="48dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32sp"
        android:layout_marginTop="32sp"
        android:layout_marginEnd="32sp"
        android:layout_marginBottom="32sp"
        android:backgroundTint="@color/teal_200"
        android:text="@string/btn_next"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="301dp"
        tools:layout_editor_absoluteY="595dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/registration_4_heading"
        android:textAlignment="center"
        android:textColor="@color/teal_800"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/user_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="50sp"
        android:backgroundTint="@color/teal_700"
        android:ems="10"
        android:hint="@string/hint_user_field"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/white_white"
        android:textColorHint="@color/teal_700" />

</RelativeLayout>